# lucebox-hub

./: CONTRIBUTING.md  README.md
dflash/: CMakeLists.txt  README.md  RESULTS.md
dflash/examples/: chat.py
dflash/scripts/: bench_he.py  bench_llm.py  convert_dflash_to_gguf.py  prefix_cache.py  run.py  server.py  setup_system.sh
dflash/src/: gguf_draft_loader.cpp  gguf_target_loader.cpp  internal.h  qwen35_target_graph.cpp  qwen3_dflash_graph.cpp  safetensors_draft.cpp
dflash/test/: test_dflash.cpp
megakernel/: bench_pp_tg.py  final_bench.py  model.py  prefill.cu  torch_bindings.cpp
pflash/tests/: bench_niah_cpp.py  niah_gen.py
